--- a/ems-frontend/ems-frontend/vercel.json
+++ b/ems-frontend/ems-frontend/vercel.json
@@ -1,8 +1,6 @@
 {
   "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/index.html"
-    }
+    { "source": "/api/(.*)", "destination": "http://34.14.204.50/ems/$1" },
+    { "source": "/(.*)", "destination": "/index.html" }
   ]
 }
