--- a/ems-frontend/ems-frontend/vercel.json
+++ b/ems-frontend/ems-frontend/vercel.json
@@ -1,6 +1,6 @@
 {
   "rewrites": [
-    { "source": "/api/(.*)", "destination": "http://34.14.204.50/ems/$1" },
+    { "source": "/api/(.*)", "destination": "http://34.14.204.50/ems/api/$1" },
     { "source": "/(.*)", "destination": "/index.html" }
   ]
 }
